[gd_scene load_steps=41 format=2]

[ext_resource path="res://World/hurkko.png" type="Texture" id=1]
[ext_resource path="res://World/Mount.gd" type="Script" id=2]
[ext_resource path="res://People/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://MountStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shadows/shadow_mount.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99998
height = 14.0

[sub_resource type="Animation" id=2]
resource_name = "FreeIdleLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FreeIdleRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.45
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.45
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "FreeIdleLeft"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "FreeIdleLeft"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "FreeIdleRight"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "FreeIdleRight"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "FreeIdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "FreeIdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = Vector2( -0.1, 1.1 )
blend_point_2/node = SubResource( 10 )
blend_point_2/pos = Vector2( 0.1, 1.1 )
blend_point_3/node = SubResource( 11 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 12 )
blend_point_4/pos = Vector2( 0.1, -1.1 )
blend_point_5/node = SubResource( 13 )
blend_point_5/pos = Vector2( -0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( -0.1, 1.1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0.1, 1.1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 19 )
blend_point_4/pos = Vector2( 0.1, -1.1 )
blend_point_5/node = SubResource( 20 )
blend_point_5/pos = Vector2( -0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( -0.1, 1.1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0.1, 1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 26 )
blend_point_4/pos = Vector2( 0.1, -1.1 )
blend_point_5/node = SubResource( 27 )
blend_point_5/pos = Vector2( -0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachine" id=33]
states/FreeIdle/node = SubResource( 14 )
states/FreeIdle/position = Vector2( 373, 137 )
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 572, 137 )
states/Run/node = SubResource( 28 )
states/Run/position = Vector2( 763, 137 )
transitions = [ "Idle", "Run", SubResource( 29 ), "Run", "Idle", SubResource( 30 ), "FreeIdle", "Idle", SubResource( 31 ), "Idle", "FreeIdle", SubResource( 32 ) ]
start_node = "FreeIdle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="CircleShape2D" id=35]
radius = 51.0

[node name="Hurkko" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32.5 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 11

[node name="MountStats" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FreeIdleLeft = SubResource( 2 )
anims/FreeIdleRight = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/RunLeft = SubResource( 6 )
anims/RunRight = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 33 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 34 )
parameters/FreeIdle/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -33 )
shape = SubResource( 35 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="InteractKeyAttachPoint" type="Node2D" parent="."]
position = Vector2( 0, -69 )

[node name="LeftPlayerAttachPoint" type="Node2D" parent="."]
position = Vector2( -6, -42 )

[node name="RightPlayerAttachPoint" type="Node2D" parent="."]
position = Vector2( 6, -42 )
[connection signal="interact_ended" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_interact_ended"]
[connection signal="interact_started" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_interact_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PlayerDetectionZone"]
